[project]
name = "shellrunner"
version = "0.4.1"
description = "Write safe shell scripts in Python."
authors = [
    {name = "adamhl8", email = "adamhl@pm.me"},
]
dependencies = [
    "psutil>=5.9.6",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Unix Shell",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
]
keywords = ["shell", "scripting", "bash", "zsh", "fish"]

[project.urls]
"Homepage" = "https://github.com/adamhl8/shellrunner"
"Source" = "https://github.com/adamhl8/shellrunner"
"Bug Tracker" = "https://github.com/adamhl8/shellrunner/issues"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1.7",
    "pytest>=7.4.3",
    "pyroma>=4.2",
    "types-psutil>=5.9.5.17",
]

[tool.rye.scripts]
test = "pytest shellrunner"
"lint:pyright" = "pyright ."
"lint:ruff" = "ruff check ."
"lint:ruff:format" = "ruff format --check ."
"lint:pyroma" = "pyroma -n 10 ."
lint = { chain = ["lint:pyright", "lint:ruff", "lint:ruff:format", "lint:pyroma"] }
format = "ruff format ."

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff]
line-length = 120
output-format = "grouped"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
"ANN101",
# ruff conflicts
"D203",
"D213",
# ruff format conflicts
"COM812",
"ISC001",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["shellrunner"]
exclude = ["test*.py"]

[tool.hatch.metadata]
allow-direct-references = true
